--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			body {
 				font-family: "Helvetica-Neue", sans-serif;		
 				background-color: #555;
+				color: #fff;
 			}
 			h1 {
 				margin: 0.5em 0;
