chore: add TODO ideas

--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
 			</svg>
 		</div>
 		<script>
+			// TODO toggle seconds hand
+			// TODO toggle minute increments
+			// 24 hour clock AM / PM
+
 			const swissClock = document.getElementById('swissClock');
 
 			swissClock.style.setProperty('--hourHandAngle', '150deg');
