docs: add TODOs

--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
 		<script>
 			// TODO toggle seconds hand
 			// 24 hour clock AM / PM
+			// TODO night mode
+			// TODO theme
+			// TODO style form
 
 			const swissClock = document.getElementById('swissClock');
 			const localeSelect = document.getElementById('locale-select');
